# spriteModels

./: .gitignore  Cargo.toml  README.md
.codex/skills/create-depthsprite-assets/: SKILL.md
.codex/skills/create-depthsprite-assets/agents/: openai.yaml
.codex/skills/create-depthsprite-assets/references/: asset-principles.md
.github/workflows/: ci.yml
assets/examples/: block.depthsprite  bowl.depthsprite  dome.depthsprite  globe.depthsprite  gyroscope.depthsprite  tent.depthsprite
benches/: render.rs
crates/depthsprite-format/: Cargo.toml
crates/depthsprite-format/src/: error.rs  lib.rs  load.rs  manifest.rs  png_source.rs  save.rs
crates/depthsprite-format/tests/: package_rejection.rs  package_roundtrip.rs  png_source.rs  round_trip.rs  zip_boundary.rs
crates/desktop-app/: Cargo.toml
crates/desktop-app/src/: app.rs  canvas.rs  document.rs  export_jobs.rs  export_ui.rs  import_dialog.rs  jobs.rs  layout.rs  lib.rs  main.rs  menu.rs  model_view.rs  palette.rs  source_grid.rs  viewport.rs
crates/desktop-app/tests/: application.rs  canvas.rs  document_workflow.rs  layout.rs  menu.rs  model_view.rs  palette.rs  source_grid.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: camera.rs  document.rs  edit.rs  fallback.rs  history.rs  io.rs  lib.rs  preview.rs  source.rs
crates/editor-core/tests/: dimensions.rs  document.rs  editing.rs  fallback.rs  file_lifecycle.rs  history.rs  model_resolution.rs  preview.rs
crates/fixture-gen/: Cargo.toml
crates/fixture-gen/src/: block.rs  bowl.rs  dome.rs  globe.rs  gyroscope.rs  lib.rs  main.rs  pixel.rs  tent.rs
crates/fixture-gen/tests/: bowl_geometry.rs  cartoon_lighting.rs  reproducibility.rs
crates/mesh-import/: Cargo.toml
crates/mesh-import/benches/: capture.rs
crates/mesh-import/src/: capture.rs  continuity.rs  cuts.rs  error.rs  lib.rs  property_tests.rs  raster.rs  scene.rs
crates/mesh-import/tests/: capture.rs  glb.rs  raster.rs  real_models.rs  registration.rs  scene.rs
crates/mesh-import/tests/fixtures/: README.md  teapot.glb
crates/relief-core/: Cargo.toml
crates/relief-core/src/: alpha.rs  chart.rs  component.rs  frame.rs  lib.rs  model.rs  rational.rs  relief.rs  resize.rs  warp.rs
crates/relief-core/tests/: alpha_and_chart.rs  authored_model.rs  relief_interpolation.rs  resize.rs  warp_properties.rs
crates/relief-render/: Cargo.toml
crates/relief-render/src/: compositor.rs  diagnostic.rs  framebuffer.rs  lib.rs  png.rs  presets.rs  raster.rs  sheet.rs
crates/relief-render/tests/: bowl_acceptance.rs  compositing.rs  demo_acceptance.rs  export_determinism.rs  orbit_visibility.rs  presets.rs
docs/plans/: 2026-07-14-depthsprite-initial-editor.md  2026-07-14-depthsprite-model-authoring-demos.md  2026-07-14-depthsprite-visual-correction.md  2026-07-14-direct-sprite-renderer-reconstruction.md  2026-07-14-optional-opposite-mirroring.md  renderer-performance.md
docs/specs/: depthsprite-app.md  depthsprite-demo-assets.md  oriented-relief-model.md
docs/superpowers/plans/: 2026-07-13-oriented-relief-sprite-implementation.md  2026-07-17-model-import.md  2026-07-18-silhouette-continuity-ownership.md
docs/superpowers/specs/: 2026-07-13-oriented-relief-sprite-design.md  2026-07-17-model-import-design.md  2026-07-18-silhouette-continuity-ownership-design.md
src/: lib.rs
tests/: e2e_cli.rs  editor_workflow.rs  golden_render.rs
tests/golden/: render_hashes.txt
