[package]
name = "sprite-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[workspace]
resolver = "3"
members = [
    "crates/desktop-app",
    "crates/depthsprite-format",
    "crates/fixture-gen",
    "crates/relief-core",
    "crates/relief-render",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
crc32fast = "=1.5.0"
eframe = { version = "=0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
flate2 = "=1.1.9"
num-rational = "=0.4.2"
png = "=0.18.1"
rfd = { version = "=0.17.2", default-features = false, features = ["xdg-portal"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
windows-sys = "=0.61.2"

[dev-dependencies]
desktop-app = { path = "crates/desktop-app" }
relief-core = { path = "crates/relief-core" }
relief-render = { path = "crates/relief-render" }
tempfile.workspace = true
zip.workspace = true
