[package]
name = "sprite-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[workspace]
resolver = "3"
members = [
    "crates/depthsprite-format",
    "crates/desktop-app",
    "crates/editor-core",
    "crates/fixture-gen",
    "crates/relief-core",
    "crates/relief-render",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
eframe = { version = "=0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
num-rational = "=0.4.2"
png = "=0.18.1"
rfd = { version = "=0.17.2", default-features = false, features = ["xdg-portal"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "=0.5.1", default-features = false, features = ["cargo_bench_support"] }
depthsprite-format = { path = "crates/depthsprite-format" }
editor-core = { path = "crates/editor-core" }
fixture-gen = { path = "crates/fixture-gen" }
png.workspace = true
relief-core = { path = "crates/relief-core" }
relief-render = { path = "crates/relief-render" }
tempfile.workspace = true
zip.workspace = true

[[bench]]
name = "render"
harness = false

# Rendering is compute-heavy; run the render crates optimized inside the
# otherwise-debug test profile so the golden-image suite finishes quickly.
# Optimization level does not alter Rust floating-point semantics, so hashes
# are identical across profiles.
[profile.test.package.relief-core]
opt-level = 2
[profile.test.package.relief-render]
opt-level = 2
[profile.test.package.editor-core]
opt-level = 2
[profile.test.package.fixture-gen]
opt-level = 2

# Profiling builds need symbols on top of release optimization.
[profile.release]
debug = "line-tables-only"
