[package]
name = "depthsprite-format"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crc32fast.workspace = true
flate2.workspace = true
png.workspace = true
relief-core = { path = "../relief-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile.workspace = true
