[package]
name = "desktop-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
editor-core = { path = "../editor-core" }
eframe.workspace = true
mesh-import = { path = "../mesh-import" }
relief-core = { path = "../relief-core" }
relief-render = { path = "../relief-render" }
rfd.workspace = true

[dev-dependencies]
png.workspace = true
tempfile.workspace = true

[[bin]]
name = "depthsprite"
path = "src/main.rs"
