[package]
name = "editor-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
depthsprite-format = { path = "../depthsprite-format" }
num-rational.workspace = true
relief-core = { path = "../relief-core" }
relief-render = { path = "../relief-render" }
thiserror.workspace = true
