[package]
name = "mesh-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
gltf.workspace = true
relief-core = { path = "../relief-core" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
