[package]
name = "relief-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
num-rational.workspace = true
relief-core = { path = "../relief-core" }
thiserror.workspace = true

[dev-dependencies]
depthsprite-format = { path = "../depthsprite-format" }
